# whatsonpypi

./: .coveragerc  .cruft.json  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .pyup.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  codespell.txt  demo.tape  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: codeql.yml  coverage.yml  main.yml  publish.yml  python-publish.yml  release.yml  test.yml  validate-codecov-config.yml  vhs-pr-comment.yml  vhs.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
requirements/: dev.txt
scripts/: check_changelog_date.py  tag_release.sh
tests/: __init__.py  conftest.py  test_cli.py  test_whatsonpypi.py
whatsonpypi/: __init__.py  __main__.py  _version.py  cli.py  client.py  constants.py  exceptions.py  param_types.py  utils.py  whatsonpypi.py
